Breaking some rules... - Replace the Unsafe no-verify bootstrap loader with a plain MethodHandles.Lookup that defines a class-file-v49 Game (inference-verified, so frames stay stripped without Unsafe): Main 2,226 -> 778 B - Rewrite audio as a game-loop-pumped note queue, dropping the indy lambdas that blocked v49 and the background scheduler thread - Add LoaderMinifier pass to strip Main's dead constructor, and zlib-wrap the Game blob so the loader drops `new Inflater(true)` - Re-tune inline-allowlist.txt (refine-inline) for the new bytecode - Remove the now-unused DescriptorCollapser pass and refresh the README size table / loader notes